src/edit/css/main.css
@import 'vars.css';

.is-new-style .hide-if-new,
.hidden {
  display: none !important;
}

#sections {
  padding-left: calc(var(--header-width) + var(--header-resizer-width));
  .usercss & {
    min-height: 0;
    height: 100%;
  }
  h2 {
    margin-top: 1rem;
    margin-left: 1.7rem;
  }
}

label .icon,
label ~ .icon {
  margin-left: .5rem;
}

@keyframes highlight {
  from {
    background-color: var(--gold1);
  }
}

/************ full-width only ************/
/* TODO: maybe move more rules here so we don't need to reset them in @media(max-width: 850px) */
@media screen and (min-width: 851px), compact {
  #header > :not(#details-wrapper):not(#header-resizer) {
    margin-left: $pad;
    margin-right: $pad;
  }
  #details-wrapper {
    h2 {
      max-width: calc(var(--header-width) - 2*$pad);
      font-size: 16px;
    }
  }
  #basic-info {
    margin-top: $pad025;
    margin-bottom: $pad;
    flex-wrap: wrap;
  }
  #publish[open],
  #details-wrapper details:not([open]) {
    flex: 0 0 auto;
  }
  #details-wrapper > details {
    &[open]:not(:last-child) {
      margin-bottom: $pad05;
    }
    &:last-child {
      padding-bottom: $pad;
    }
  }
  .settings[open] {
    min-height: 6em;
  }
}

